# axiom_tilt_strategy

./: .gitignore  README.md  WAKE_UP.md  environment.yml  instructions.md  pyproject.toml  requirements.txt
dashboard/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts
deploy/: README.md  requirements-vps.txt
docs/: ibkr-account-and-gateway-setup.md  vps-deployment-setup.md
experiments/: H_mcap_downside.md  backtest_full_period.py  build_pruned_feature_set.py  build_scoreboard_walk17.py  build_sp_fcfa_scoreboards.py  build_v6_scoreboards.py  cap10_voltarget_overlay.py  cap10_vs_spy_2010_2024.py  enrich_scoreboards_with_mcap.py  extend_scoreboards.py  factor_def_variants.py  factor_pair_train_test_split.py  factor_screen_backtests.py  factor_screen_v1.py  factor_v2_extended.py  factor_variants.py  final_blend_sweep.py  mcap_baseline_test.py  permutation_importance_walk1.py  pruned_feature_set_v1.json  rebuild_scoreboards_pruned.py  regime_conditional_factor.py  regime_ensemble_factor.py  regime_k_selector.py  regime_k_selector_weights.py  results.tsv  retrain_all_walks_pruned.py  retrain_walk1_pruned.py  robustness_pre_2010.py  run_all_walks.py  run_one.py  sp_fcfa_k_sweep.py  sp_fcfa_winner_diagnostics.py  spfcfa_lgbm_rerank.py  spfcfa_lgbm_tilt.py  v6_ensembles_and_overlays.py  v6_per_year_check.py  v6_robustness_full.py  v6_spy_overlay_diagnostics.py  v6_turnover_measurement.py
notebooks/: _build_comparison_notebook.py  comparison_vs_parent_and_spy.ipynb
reports/: EXECUTIVE_SUMMARY.md  PROJECT_SUMMARY.md  (+8 more)
(+263 files in other folders)
