[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-tilt-strategy"
version = "0.0.1"
description = "Factor-screen + RL allocator on S&P 500 with 10% per-stock cap. Post-paper successor to axiom_tilt."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: hits real external APIs (Sharadar + FRED) — run with -m slow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
